fixed errors and additions from email 1 but broke nav spacing

--- a/src/components/pagestyles/home.sass
+++ b/src/components/pagestyles/home.sass
@@ -17,11 +17,14 @@
   justify-content: center
   padding: 20px
   text-align: center
+  margin: 3em 0em
   hr
-    margin: 10px
+    // margin: 10px
+    margin: 10px 0px
     width: 30vw
   p
     width: 70%
+    margin-top: 1.25em
   h2
     padding: 0
 .link__bar 
