--- a/src/components/pagestyles/projects.sass
+++ b/src/components/pagestyles/projects.sass
@@ -34,12 +34,17 @@
         flex-wrap: wrap
         justify-content: space-between
         &__single
-            width: 23%
-            margin-bottom: 25px
-            text-align: center 
-            h4
-                min-height: 3.5rem
-                // white-space: nowrap
-            @include navsnap
-                width: 48%
+          display: flex
+          flex-direction: column
+          justify-content: space-between
+          width: 23%
+          margin-bottom: 25px
+          text-align: center 
+          p
+            margin-top: .4em
+          &__bottom 
+            margin-top: .75em
+          @include navsnap
+              width: 48%
+
        
